--- a/index.ipynb
+++ b/index.ipynb
@@ -242,25 +242,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<folium.map.Marker at 0x7f4e44998080>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "buenos_marker = folium.Marker([ba_latitude, ba_longitude])\n",
-    "buenos_marker.add_to(buenos_map)"
+    "buenos_marker.add_to(buenos_map)\n",
+    "help(folium)"
    ]
   },
   {
